--- a/templates/installation/main.go/gin.tmpl
+++ b/templates/installation/main.go/gin.tmpl
@@ -7,13 +7,13 @@ import (
 	"os"
 	"os/signal"
 
-	_ "github.com/GoAdminGroup/go-admin/adapter/gin"                    // web framework adapter
-	_ "github.com/GoAdminGroup/go-admin/modules/db/drivers/{{.DriverModule}}" // sql driver
-	_ "github.com/GoAdminGroup/themes/{{.ThemePath}}"                       // ui theme
+	_ "github.com/kamruljpi/go-admin/adapter/gin"                    // web framework adapter
+	_ "github.com/kamruljpi/go-admin/modules/db/drivers/{{.DriverModule}}" // sql driver
+	_ "github.com/kamruljpi/themes/{{.ThemePath}}"                       // ui theme
 
-	"github.com/GoAdminGroup/go-admin/engine"
-	"github.com/GoAdminGroup/go-admin/template"
-	"github.com/GoAdminGroup/go-admin/template/chartjs"
+	"github.com/kamruljpi/go-admin/engine"
+	"github.com/kamruljpi/go-admin/template"
+	"github.com/kamruljpi/go-admin/template/chartjs"
 	"github.com/gin-gonic/gin"
 	
 	"{{.Module}}/pages"
